Improve Delete User API, Fix failed tests